# austrian-climate-indicators

./: .gitignore  .gitlab-ci.yml  CITATION.cff  CONTRIBUTING.md  README.md  config.toml  pyproject.toml
.github/workflows/: deploy_pages.yml
.gitlab/issue_templates/: default.md
doc/: indices.csv  visualisation_showcase.md
doc/pages/: fonts.css  index.html  indicator_definitions.qmd  overview_table.qmd
scripts/: setup_fonts.sh  zip_data.sh
src/: check_files.py  climind_attrs.py  climind_calc.py  climind_eval.py  climind_io.py  climind_plot.py  main.py  task_automation.py  utils.py
