[project]
name = "climate-indicator"
version = "2.0.0"
description = "A Toolkit to compute climate indicators for applications in climate impact research based on xclim."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask>=2025.4.1",
    "matplotlib>=3.10.1",
    "netcdf4>=1.7.2",
    "pandas>=2.2.3",
    "pytask-parallel>=0.5.1",
    "pytask>=0.5.2",
    "tomli>=2.2.1",
    "xarray>=2025.4.0",
    "xclim>=0.56.0",
    "rioxarray>=0.19.0",
    "h5netcdf>=1.6.3",
]

[project.optional-dependencies]
plot = [
    "cartopy>=0.25.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
]

[tool.pytask.ini_options]
paths = ["src"]
editor_url_scheme = "vscode"
show_errors_immediately = true
show_locals = true
n_workers = 1  # use "uv run pytask -n NUM_WORKERS" or change config for parallel computing
n-entries-in-table = 10
